fix(tab-bar): if many tabs, there will be a scrollbar

--- a/src/components/playground/playground.scss
+++ b/src/components/playground/playground.scss
@@ -17,6 +17,7 @@ $tab-active-outer-edge-curve-size: pxToRem(10);
 .tab-bar {
   display: flex;
   padding: pxToRem(3) pxToRem(16) 0 pxToRem(16);
+  overflow-y: auto;
 
   .tab {
     span {
